Adds logic to set characters base hp